# elfe

./: .ghci  .gitignore  .swp  Language.hs  Main.hs  Parser.hs  Preprocessor.hs  Prover.hs  README.md  Script.hs  Sequences.hs  Server.hs  Settings-example.hs  Settings.hs  TODO  Test.hs  Verify.hs  WhileParser.hs  allout.txt  cabal.sandbox.config  elfe-server.sh  elfe.cabal  elfe.sh  main.tex  out.ps  seq_template.tex  supervisord.conf  task.tptp  test.tptp  wot.tptp
examples/: 2irrational.elfe  Inverse and function itself is identity.elfe  Symmetric and transitive relations are reflexive.elfe  Symmetric subrelations.elfe  Union of relation and inverse is symmetric.elfe  beaglecounter.elfe  cantor.elfe  compcomp.elfe  compinvrel.elfe  geo1.elfe  geo1_direct.elfe  gupta.elfe  injective.elfe  injective2.elfe  inverse.elfe  reflexive-wrong.elfe  reflexive.elfe  reflexive2.elfe  relunionsymmetric.elfe  setcomp.elfe  setcomp2.elfe  setsint.elfe  simple.elfe  square.elfe  subrelsymm.elfe  surjective.elfe  tarski.elfe  test.elfe
src/: Elfe.hs  Main.hs  Server.hs
src/Elfe/: Countermodel.hs  Language.hs  Parser.hs  Preprocessor.hs  Prover.hs  Verifier.hs
temp/: Sequences.hs  arith.tptp  counter.tptp  eproverbug.tptp  out.txt  test.tptp  theorem.tptp  wrong.tptp
web/: index.html  scripts.js  style.css
web/css/: prover.css  skeleton.css  style.css
web/js/: scripts.js
web/templates/: examples.html  footer.html  header.html  index.html
web/templates/training/: 0.html  1.html  2.html  3.html  4.html  5.html  header.html
