name:                elfe
version:             0.1.0
synopsis:            Interactive theorem proving for students
homepage:            https://elfe-prover.org
license:             MIT
author:              Maximilian Dore
maintainer:          maximilian.dore@rwth-aachen.de
build-type:          Simple
cabal-version:       >=1.8

executable elfe
  main-is:             Main.hs
  hs-source-dirs:      src, .
  exposed-modules:     Elfe
  extensions:          OverloadedStrings
                     , DeriveGeneric
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , criterion
                     , lifted-base
                     , cryptonite
                     , vector
                     , mtl
                     , parsec
                     , process
                     , directory

executable elfe-server
  main-is:             Server.hs
  hs-source-dirs:      src, .
  exposed-modules:     Elfe
  extensions:          OverloadedStrings
                     , DeriveGeneric
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , criterion
                     , lifted-base
                     , cryptonite
                     , vector
                     , mtl
                     , parsec
                     , process
                     , directory
                     , aeson
                     , blaze-html