name:                elfe
version:             0.1.0
synopsis:            Interactive theorem proving for students
homepage:            https://elfe-prover.org
license:             MIT
author:              Maximilian Dore
maintainer:          maximilian.dore@rwth-aachen.de
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
      Elfe
      Elfe.Language
      Elfe.Preprocessor
      Elfe.Parser
      Elfe.Verifier
      Elfe.Prover
      Settings
  hs-source-dirs:
      src, .

executable elfe
  main-is:             Main.hs
  hs-source-dirs:      src, .
  other-modules:
      Elfe
      Elfe.Language
      Elfe.Preprocessor
      Elfe.Parser
      Elfe.Verifier
      Elfe.Prover
      Settings
  extensions:          OverloadedStrings
                     , DeriveGeneric
                     , DeriveDataTypeable
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , criterion
                     , lifted-base
                     , cryptonite
                     , vector
                     , mtl
                     , parsec
                     , process
                     , directory
                     , random
                     , criterion-measurement

executable elfe-server
  main-is:             Server.hs
  hs-source-dirs:      src, .
  other-modules:
      Elfe
      Elfe.Language
      Elfe.Preprocessor
      Elfe.Parser
      Elfe.Verifier
      Elfe.Prover
      Settings
  extensions:          OverloadedStrings
                     , DeriveGeneric
                     , DeriveDataTypeable
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , criterion
                     , lifted-base
                     , cryptonite
                     , vector
                     , mtl
                     , parsec
                     , process
                     , directory
                     , aeson
                     , hastache
                     , random
                     , criterion-measurement